# VirtualTec2

./: .gitignore  CMakeLists.txt  INST.ROM  LICENSE  MCR.ROM  bit.cpp  bit.h  chip.cpp  chip.h  monitor.cpp  readme.md  tec2.cpp  tec2.h
